--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,25 +11,28 @@ jobs:
     environment: VPS
 
     steps:
+      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Set up JDK 21 for backend
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
+      # 3. Check Java version
       - name: Check Java version
         run: java -version
 
-      # Installer Heroku CLI
+      # 4. Install Heroku CLI
       - name: Install Heroku CLI
         run: |
           curl https://cli-assets.heroku.com/install.sh | sh
           heroku --version
 
-      # Authentification Heroku
+      # 5. Set up Heroku authentication
       - name: Set up Heroku auth
         run: |
           echo "machine api.heroku.com" > ~/.netrc
@@ -41,6 +44,7 @@ jobs:
           heroku auth:whoami
 
       # ========== BACKEND ==========
+
       - name: Build & Deploy Backend to Heroku
         run: |
           cd backend
@@ -51,6 +55,7 @@ jobs:
           docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME_BE }}/web
           heroku container:release web --app ${{ secrets.HEROKU_APP_NAME_BE }}
 
+      # Set backend Heroku config vars
       - name: Set Backend Heroku config vars
         run: |
           heroku config:set POSTGRES_DB=${{ secrets.POSTGRES_DB }} --app ${{ secrets.HEROKU_APP_NAME_BE }}
@@ -68,6 +73,7 @@ jobs:
           heroku config:set MDP_GOOGLE=${{ secrets.MDP_GOOGLE }} --app ${{ secrets.HEROKU_APP_NAME_BE }}
 
       # ========== FRONTEND ==========
+
       - name: Reset Docker buildx (prévention bug)
         run: docker buildx uninstall || true
 
@@ -80,6 +86,7 @@ jobs:
           docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME_FE }}/web
           heroku container:release web --app ${{ secrets.HEROKU_APP_NAME_FE }}
 
+      # Set frontend Heroku config vars
       - name: Set Frontend Heroku config vars
         run: |
           heroku config:set POSTGRES_DB=${{ secrets.POSTGRES_DB }} --app ${{ secrets.HEROKU_APP_NAME_FE }}
