fix entity, add adresse&evenementController, fix dto, add repo, add evenement&adresseService, fix custom&utilisateur service

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,6 +69,13 @@
             <version>6.2.3</version>
         </dependency>
 
+        <!-- jakarta Driver -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
         <!-- PostgreSQL Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -119,7 +126,6 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
