--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuration PostgreSQL
-spring.datasource.url=jdbc:postgresql://db:5432/${POSTGRES_DB}
+spring.datasource.url=jdbc:postgresql://db:5432/bd_jo2024
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
