--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
-    image: postgres:17-alpine
-    container_name: db_jo2024
+    image: postgres:17.0
+    container_name: bloc3_db_jo2024
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
@@ -11,8 +11,6 @@ services:
       - "6000:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-    networks:
-      - jo_network
 
   backend:
     build:
@@ -39,8 +37,6 @@ services:
       MDP_GOOGLE: ${MDP_GOOGLE}
     depends_on:
       - db
-    networks:
-      - jo_network
 
   frontend:
     build:
@@ -50,11 +46,6 @@ services:
       - "80:80"
     depends_on:
       - backend
-    networks:
-      - jo_network
 
 volumes:
   db_data:
-
-networks:
-  jo_network:
