--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,12 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "6000:5432"
+    env_file:
+      - .env
     volumes:
       - db_data:/var/lib/postgresql/data
+    networks:
+      - jo2024_net
 
   backend:
     build:
@@ -37,6 +41,10 @@ services:
       MDP_GOOGLE: ${MDP_GOOGLE}
     depends_on:
       - db
+    env_file:
+      - .env
+    networks:
+      - jo2024_net
 
   frontend:
     build:
@@ -46,6 +54,26 @@ services:
       - "80:80"
     depends_on:
       - backend
+    networks:
+      - jo2024_net
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin_jo2024
+    restart: unless-stopped
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+    depends_on:
+      - db
+    networks:
+      - jo2024_net
 
 volumes:
   db_data:
+
+networks:
+  jo2024_net:
+    driver: bridge
