--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,8 +83,7 @@ jobs:
           heroku container:login
           docker build . --platform linux/amd64 -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME_FE }}/web
           docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME_FE }}/web
-          echo "Fake fix to bypass /web bug"
-          heroku container:release web --app ${{ secrets.HEROKU_APP_NAME_BE }} || true
+          heroku container:release web --app ${{ secrets.HEROKU_APP_NAME_FE }}
 
       # Set frontend Heroku config vars
       - name: Set Frontend Heroku config vars
