fix /home/runner/work/_temp/78077f8e-5bcc-4921-b139-0235f731dbf9.sh: line 7: /web: No such file or directory Error: Process completed with exit code 127. modif

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -22,8 +22,10 @@ RUN mkdir -p dist/css && npm run build-css
 # Étape 2 : Configurer le serveur Nginx pour servir les fichiers compilés
 FROM nginx:stable-alpine3.20
 
-# Copie de la configuration Nginx personnalisée
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+# script d'entrée + config template
+COPY nginx/nginx.conf.template /etc/nginx/nginx.conf.template
+COPY init.sh /init.sh
+RUN chmod +x /init.sh
 
 # Copier les fichiers compilés dans Nginx (tout le dossier dist)
 COPY --from=build /app/dist /usr/share/nginx/html
@@ -31,5 +33,5 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Exposer le port 80 pour accéder à l'application
 EXPOSE 80
 
-# Démarrer le serveur Nginx en mode "foreground"
-CMD ["nginx", "-g", "daemon off;"]
+# Lancement dynamique
+ENTRYPOINT ["/init.sh"]
