--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuration Hibernate (JPA)
-spring.jpa.hibernate.ddl-auto=update
+# Configuration Hibernate (JPA)  // !! \\ il faut basculer en update pour la prod // !! \\
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
@@ -16,6 +16,7 @@ jwt.expiration=${JWT_EXPIRATION}
 
 # Configuration Serveur (Spring Boot)
 server.port=${BACKEND_PORT:8080}
+# // !! \\ il faut basculer en update pour la prod // !! \\
 server.error.include-message=always
 
 # Configuration OAuth2 Google
@@ -36,3 +37,10 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # Compte admin
 admin.email=${ADMIN_EMAIL}
 admin.password=${ADMIN_PASSWORD}
+admin.path.prefix=/management
+admin.auth.path.prefix=/management/auth
+
+# CONFIGURATION DES LOGS
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.fr.bloc_jo2024=DEBUG
