--- a/frontend/nginx/nginx.conf.template
+++ b/frontend/nginx/nginx.conf.template
@@ -1,6 +1,3 @@
-# Utilise tous les CPU disponibles pour le traitement des requêtes.
-worker_processes auto;
-
 events {
     # Nombre maximum de connexions simultanées par worker.
     worker_connections 1024;
@@ -30,7 +27,7 @@ http {
 
         # Proxy les requêtes vers le backend via l'URL spécifiée dans ${API_BASE_URL}
         location /api/ {
-            proxy_pass https://${API_BASE_URL};
+            proxy_pass https://$API_BASE_URL;
 
             # En-têtes utiles pour transmettre l'identité du client
             proxy_set_header Host $host;
