--- a/frontend/nginx/nginx.conf.template
+++ b/frontend/nginx/nginx.conf.template
@@ -13,8 +13,7 @@ http {
 
     server {
         # Heroku fournit le port via une variable d'environnement ${PORT}
-        # Ce sera remplacé par envsubst dans le script de démarrage.
-        listen $PORT;
+        listen ${PORT};
 
         # Nom du serveur. Ne sert pas dans un contexte Heroku, mais conservé pour dev.
         server_name localhost;
@@ -30,12 +29,12 @@ http {
 
         # Proxy les requêtes vers le backend via l'URL spécifiée dans ${API_BASE_URL}
         location /api/ {
-            proxy_pass https://$API_BASE_URL;
+            proxy_pass https://${API_BASE_URL};
 
             # En-têtes utiles pour transmettre l'identité du client
-            proxy_set_header Host "\$host";
-            proxy_set_header X-Real-IP "\$remote_addr";
-            proxy_set_header X-Forwarded-For "\$proxy_add_x_forwarded_for";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
             # Fichier statique à servir si le backend est inaccessible
             error_page 502 /api-error.html;
