--- a/frontend/nginx/nginx.conf.template
+++ b/frontend/nginx/nginx.conf.template
@@ -33,9 +33,9 @@ http {
             proxy_pass https://$API_BASE_URL;
 
             # En-têtes utiles pour transmettre l'identité du client
-            proxy_set_header Host "\$host";
-            proxy_set_header X-Real-IP "\$remote_addr";
-            proxy_set_header X-Forwarded-For "\$proxy_add_x_forwarded_for";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
             # Fichier statique à servir si le backend est inaccessible
             error_page 502 /api-error.html;
