--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,6 +81,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- Lombok -->
@@ -137,8 +138,14 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
+        <!-- Logger -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <!-- Spring Boot Maven Plugin -->
