--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     ports:
       - "8080:8080"
     environment:
+      SPRING_PROFILES_ACTIVE: dev
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -53,6 +54,7 @@ services:
     ports:
       - "80:80"
     environment:
+      ENVIRONMENT: development
       API_BASE_URL: back_jo2024:8080
     depends_on:
       - backend
