--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -3,9 +3,16 @@ spring:
     url: jdbc:postgresql://db:5432/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
-    driver-class-name: org.postgresql.Driver # Connexion à la base PostgreSQL Docker (réseau Docker Compose)
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
   mail:
-    host: ${SMTP_HOST:localhost} # SMTP pour envoi de faux email
+    host: ${SMTP_HOST:localhost}
     port: ${SMTP_PORT:1025}
     username: ${EMAIL_USERNAME:}
     password: ${EMAIL_PASSWORD:}
@@ -15,6 +22,7 @@ spring:
           auth: true
           starttls:
             enable: true
+
   security:
     oauth2:
       client:
@@ -31,7 +39,7 @@ jwt:
   secret: ${JWT_SECRET}
 
 server:
-  port: 8080 # Port du serveur
+  port: 8080
   error:
     include-message: always
 
