--- a/frontend/nginx/nginx.conf.template
+++ b/frontend/nginx/nginx.conf.template
@@ -41,7 +41,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://$API_BASE_URL;
+            proxy_pass $API_BASE_URL;
 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
