test :  hibernate ddl-auto: create-drop

--- a/backend/src/main/resources/application-prod..yml
+++ b/backend/src/main/resources/application-prod..yml
@@ -1,14 +1,12 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
-    username: ${DATABASE_USER}
-    password: ${DATABASE_PASSWORD}
+    url: ${DATABASE_URL}
     driver-class-name: org.postgresql.Driver
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
 
   mail:
     host: ${SMTP_HOST}
