--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,10 +46,11 @@ jobs:
       - name: Set Backend Heroku config vars
         run: |
           heroku config:set SPRING_PROFILES_ACTIVE=docker \
-          POSTGRES_HOST=${{ secrets.ALWAYS_POSTGRES_HOST }} \
-          POSTGRES_NAME_DB=${{ secrets.ALWAYS_POSTGRES_DB }} \
-          POSTGRES_USER=${{ secrets.ALWAYS_POSTGRES_USER }} \
-          POSTGRES_PASSWORD=${{ secrets.ALWAYS_POSTGRES_PASSWORD }} \
+          ALWAYS_POSTGRES_HOST=${{ secrets.ALWAYS_POSTGRES_HOST }} \
+          ALWAYS_POSTGRES_PORT=5432 \
+          ALWAYS_POSTGRES_DB=${{ secrets.ALWAYS_POSTGRES_DB }} \
+          ALWAYS_POSTGRES_USER=${{ secrets.ALWAYS_POSTGRES_USER }} \
+          ALWAYS_POSTGRES_PASSWORD=${{ secrets.ALWAYS_POSTGRES_PASSWORD }} \
           JWT_SECRET=${{ secrets.JWT_SECRET }} \
           JWT_EXPIRATION=${{ secrets.JWT_EXPIRATION }} \
           EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME }} \
